--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ footer{
     </div>
 	<<div class="team-card team-center">
   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhy1XtD8FcpXderYQtylhqId3jJ0W0OiHcATvBv02p5q0HXRPM4HBcsRbxIMyLBAKMVcut5qdU4rC0LQ8-mILWcVLSFDZkBvzwOFU_YnN_YiwxbEAjDS5WiN-CDDP-LrZnMLOvcEaoc_Fmdwk1OgxVcanwtjUicikmH24xIVGlYY2AonMK9e5QITT16G-s/s216/dontol.jpg">
-  <h4>Daniswara Raisha Santana.S</h4>
+  <h4>Daniswara Raisha Santana.S/h4>
 </div>
 
   </div>
@@ -616,3 +616,4 @@ footer{
 
 </body>
 </html>
+
