--- a/index.html
+++ b/index.html
@@ -593,9 +593,9 @@ footer{
       <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijBxeHYDONIS5r42l_6zop0EQQQTRWuA6KxPQoPCelcHOsUlt5nmc3ldR-acEQ2ZbYBqCe67SR9WmxMua7q4uQoAqEh7CjiR3gkfIDvcvNUtLu8nskJbHGfv1p3i-TgWN1VieP54uEg3G_zyn09_YWhvSVCehAhEiVq8oDSyD5xMpJSL3gs7xjP7RMRnA/s177/apip.jpeg">
       <h4>Wahyu Ramadhani</h4>
     </div>
-	<<div class="team-card team-center">
+<div class="team-card team-center">
   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhy1XtD8FcpXderYQtylhqId3jJ0W0OiHcATvBv02p5q0HXRPM4HBcsRbxIMyLBAKMVcut5qdU4rC0LQ8-mILWcVLSFDZkBvzwOFU_YnN_YiwxbEAjDS5WiN-CDDP-LrZnMLOvcEaoc_Fmdwk1OgxVcanwtjUicikmH24xIVGlYY2AonMK9e5QITT16G-s/s216/dontol.jpg">
-  <h4>Daniswara Raisha Santana.S/h4>
+  <h4>Daniswara Raisha Santana.S</h4>
 </div>
 
   </div>
@@ -616,4 +616,5 @@ footer{
 
 </body>
 </html>
+
 
